<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="12dp"
    android:layout_margin="7dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/Nombre_cliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nombre_client"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Nombre_Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/Nombre_cliente"
                android:text="Nombre de Entrega"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/Direccion_cliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Direc_client"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Direccion_Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/Direccion_cliente"
                android:text="Direccion de Entrega"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Boton_Detalles"
            android:id="@+id/ver_detalles_Card"
            android:backgroundTint="@color/botones"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>