<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".capa_aplicacion.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="97dp"
            android:layout_height="71dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/logo_empresa_foreground" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_black"
            android:text='BIENVENIDO'
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/bienvenido"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/muli_black"
            android:text="Iniciar Sesión"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/bienvenido"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombre"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:hint="@string/Nombre_usuario" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/lock2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contraseña"
                android:layout_width="314dp"
                android:layout_height="wrap_content"
                android:hint="@string/Contraseña"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/registrar"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/bienvenido"
            android:layout_marginTop="20dp"
            android:text="@string/iniciar" />

        <Button
            android:id="@+id/crearcuenta"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#FFFFFF"
            android:text="@string/nuevo"
            android:textColor="@color/bienvenido"/>

    </LinearLayout>

</ScrollView>