<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    >
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigation"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header_activity_navigation"
        app:menu="@menu/menu_item" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/menu">


                <ImageView
                    android:id="@+id/nav_drawer"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/slidemenu" />

                <TextView
                    android:id="@+id/textView0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Menu de Aplicacion"
                    android:textColor="@color/nombre_email"
                    android:textSize="22sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="86dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nombre de ususario"
                        android:textColor="@color/nombre_email"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView1"
                        android:text="Email"
                        android:textColor="@color/nombre_email"
                        android:textSize="22sp" />

                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:layout_alignParentRight="true"
                        android:src="@mipmap/user_logo_foreground" />


                </RelativeLayout>

            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="538dp"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="3">

                <androidx.cardview.widget.CardView
                    android:id="@+id/perfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:src="@mipmap/user_logo_foreground" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/perfil"
                            android:textColor="@color/menu_opciones"
                            android:textSize="25dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/Entregas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="100dp"
                            android:src="@mipmap/entrega_icono_foreground" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="  Entregas\nDisponibles"
                            android:textColor="@color/menu_opciones"
                            android:textSize="25dp" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/historial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:src="@mipmap/historial_entregas_foreground" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/hist_entregas"
                            android:textColor="@color/menu_opciones"
                            android:textSize="25dp" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"
                    android:id="@+id/Acerca">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="100dp"
                            android:src="@mipmap/logo_empresa_foreground" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/acerca_nost"
                            android:textColor="@color/menu_opciones"
                            android:textSize="25dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </GridLayout>

        </LinearLayout>
    </ScrollView>


</androidx.drawerlayout.widget.DrawerLayout>